--- a/Software/StaffManagementTool/package.json
+++ b/Software/StaffManagementTool/package.json
@@ -27,6 +27,8 @@
     "angular2-datatable": "^0.6.0",
     "core-js": "^2.4.1",
     "ngx-bootstrap": "^1.6.6",
+    "ng2-tag-input": "^1.2.9",
+    "ng2-select": "^1.2.0",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
   },
